# just_pick_it

./: .gitignore  .gitmodules  CLAUDE.md  README.md  TASK_PLAN.md  build_amr.sh  build_arm.sh  build_picky1.sh  build_picky2.sh  reset_demo_data.sh  reset_ws.sh  run_all.sh  박서우_포트폴리오.md  인수인계서.md
db/: README.md  schema.sql  seed.sql
docs/: Control_Service_통합_계획.md  Fleet_Manager_API_스펙_초안.md  Fleet_Manager_분담_및_TODO.md  Fleet_manager.md  Fleet_manager_TODO.md  Fleet_manager_components.md  Fleet_manager_interface.md  LLM_Order_Command_Guide.md  Multi_Robot_Discovery_Server.md  Order_Scenario_Test_Guide.md  R1_재시작_복구_설계_논의.md  Reverse_Docking_Design.md  Reverse_Docking_Summary.md  System_Execution_Runbook.md  ros2_driving_beginner_guide.md  전체_워크플로.md
docs/uml/: order_fsm.yuml  robot_fsm.yuml
jetcobot1_captures/: camera_calibration.yaml
scripts/: dds_env.sh  discovery_server.sh
scripts/build_tools/: build_picky1.sh  build_picky2.sh
scripts/calibration/: calibrate_camera.sh
scripts/demo/: README.md  emergency_monitor.py  fake_robot_servers.py  full_flow_demo.env.example  marker_pose_check.py  run_fake_robot_servers.sh  run_full_flow_demo.sh
scripts/mapping/: pane1_gazebo.sh  pane2_slam.sh  pane3_rviz.sh  pane4_teleop.sh  pane5_map_saver.sh  real_map_building.sh  real_pane1_bringup.sh  real_pane2_slam.sh  real_pane3_rviz.sh  sim_map_building.sh  (+1 more)
src/just_pick_it/just_pick_it_db/: package.xml  setup.py
src/just_pick_it/just_pick_it_db/just_pick_it_db/: __init__.py  models.py  session.py
src/just_pick_it/just_pick_it_db/just_pick_it_db/services/: __init__.py  display_service.py  inventory_status.py  product_images.py  robot_runtime_policy.py  status_service.py  stocking_service.py  workflow_service.py
src/just_pick_it/just_pick_it_db/test/: test_display_service.py
src/just_pick_it/just_pick_it_perception/: PLAN.md  package.xml  setup.cfg  setup.py
src/just_pick_it/just_pick_it_perception/config/: apriltag_pose_estimator.rviz  apriltag_pose_estimator_real.rviz  apriltag_world_poses.yaml  bytetrack.yaml  detection_apriltag_poses.yaml  detection_params.yaml  empty_slot_detector_params.yaml  place_planner_params.yaml
src/just_pick_it/just_pick_it_perception/just_pick_it_perception/: apriltag_detector.py  apriltag_detector_real.py  apriltag_map_tf_publisher.py  apriltag_pose_estimator.py  camera_calibrator.py  camera_publisher_node.py  capture_aruco_image.py  capture_image.py  csrt_place_tracker_node.py  cv_image_utils.py  detection_tracker_node.py  empty_slot_detector_node.py  episode_replay_tester_node.py  generate_apriltag_board.py  hand_eye_calibrator.py  human_interaction_recorder_node.py  ibvs_controller_node.py  nn_controller_model.py  nn_controller_node.py  place_finalizer_node.py  shelf_place_planner_node.py  target_manager_node.py  udp_image_receiver.py  udp_image_sender.py  udp_image_sender_node.py  udp_image_video_gen.py  usb_camera_node.py  visual_servo_bag_recorder_node.py  yolo_seg_infer_node.py  yolo_seg_trainer.py
src/just_pick_it/just_pick_it_perception/launch/: apriltag_nodes.launch.xml  apriltag_pose_estimator.launch.xml  apriltag_pose_estimator_real.launch.xml  detection.launch.xml  empty_slot_detector.launch.py  ibvs_controller.launch.py  ibvs_controller.launch.xml  nn_data_collection.launch.py  nn_data_collection_closeloop.launch.py  nn_inference.launch.py  nn_inference_closeloop.launch.py  place_servo.launch.py  shelf_place_planner.launch.py  usb_camera.launch.xml  visual_servo_bag_recorder.launch.py  yolo_seg_infer.launch.xml
src/just_pick_it/just_pick_it_perception/result/: camera_calibration.yaml
src/just_pick_it/just_pick_it_perception/result/nn_controller/: grip_success_predictor.onnx  nn_controller_config.json  nn_controller_policy.onnx
src/just_pick_it/just_pick_it_perception/result/nn_controller/pick/: grip_success_predictor.onnx  nn_controller_config.json  nn_controller_policy.onnx
src/just_pick_it/just_pick_it_perception/result/nn_controller/place/: grip_success_predictor.onnx  nn_controller_policy.onnx
src/just_pick_it/just_pick_it_perception/result/picky_2/: camera_calibration.yaml
src/just_pick_it/just_pick_it_perception/scripts/: extract_frames.py  train_nn_controller.py  train_nn_controller_closeloop.py  train_yolo_seg.py
src/just_pick_it/picky_cobot_1/: cobot_state_machine.py  package.xml  setup.cfg  setup.py
src/just_pick_it/picky_cobot_1/config/: place_empty_detection.rviz
src/just_pick_it/picky_cobot_1/launch/: display_agent.launch.py  ibvs_nn_pick_agent.launch.py  ibvs_nn_place_agent.launch.py  picky_cobot.launch.py  place_nn_data_collection.launch.py  place_nn_servo.launch.py
src/just_pick_it/picky_cobot_1/picky_cobot_1/: cobot_controller.py  cobot_state_machine.py  csrt_overlay_viz.py  display_place_agent.py  ibvs_nn_pick.py  ibvs_nn_pick_agent.py  place_interaction_recorder.py  place_scan_seeder.py  task_debug_gui.py
src/just_pick_it/pinky_amr_2/: package.xml  setup.cfg  setup.py
src/just_pick_it/pinky_amr_2/behavior_trees/: navigate_through_poses_picky2.xml
src/just_pick_it/pinky_amr_2/launch/: amr2_bringup.launch.py  obstacle_stop.launch.py  odom_logger.launch.py  picky2_bringup.launch.py  picky2_nav.launch.py  picky2_slam.launch.py  picky2_state_machine.launch.py  scan_logger.launch.py
src/just_pick_it/pinky_amr_2/params/: mapper_params.yaml  move_to_goal.yaml  nav2_params.yaml  reverse_docking.yaml  state_machine.yaml
src/just_pick_it/pinky_amr_2/pinky_amr_2/: battery_publisher.py  emergency_guard.py  move_to_goal.py  obstacle_stop.py  odom_logger.py  reverse_docking.py  scan_logger.py  state_machine.py  tf_frame_adapter.py
web/: .env.example  API_USAGE.md  README.md  WORKFLOW.md  requirements.txt
(+222 files in other folders)
