<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>just_pick_it_perception</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jjeongpark@gmail.com">jaejeongpark</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-yaml</depend>
  <depend>python3-numpy</depend>
  <depend>python3-transforms3d</depend>
  <depend>just_pick_it_interfaces</depend>
  
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosbag2_storage</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
