<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picky_cobot_1</name>
  <version>0.0.0</version>
  <description>Cobot State Manager for just_pick_it system</description>
  <maintainer email="mnbv9487@gmail.com">Juminsun</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>just_pick_it_interfaces</depend>
  <!-- ibvs_nn_pick_agent.launch.py 가 detection(yolo_seg_infer)을 include 하고
       nn_inference.launch.py 를 on-demand 실행하므로 perception 패키지에 의존한다 -->
  <exec_depend>just_pick_it_perception</exec_depend>
  <!-- picky_cobot.launch.py 가 jetcobot_control_with_camera.launch.py(드라이버+카메라)를
       include 하므로 jetcobot_bringup 에 의존한다 -->
  <exec_depend>jetcobot_bringup</exec_depend>
  <!-- task_debug_gui 는 tkinter 사용 -->
  <exec_depend>python3-tk</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
